--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ It contains all styles for this
 sub-theme.
 -------------------------------*/
 
-@import url(https://fonts.googleapis.com/css?family=Merriweather:400,700);
+@import url(https://fonts.googleapis.com/css?family=Cinzel:400,700);
 
 /* TABLE OF CONTENTS */
 
