--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ sub-theme.
 @import url("editing.css");
 
 /* 6. NEWS AND EVENTS FEED */
-@import url("news-feed.css");
+/*@import url("news-feed.css");*/
 
 /* 7. ARTICLE PAGE: News, Blog Post, Story */
 @import url("article.css");
