--- a/css/section.css
+++ b/css/section.css
@@ -1,7 +1,79 @@
 
+/* VIEWS
+___________________________*/
+.views-row {
+  border: none;
+  background-color: black;
+}
+.views-row-1.yo {
+  border: 2px solid red;
+}
+
+.view-lam-square-updates .views-row {
+    position: relative;
+    width: 50%;
+    /*outline: 1px solid;*/
+    float: left;
+    border-top: 2px solid #FFF;
+    }
+    .view-lam-square-updates .views-row img {
+        width: 100%;
+        height: auto;
+        opacity: 0.7;
+        }
+    .view-lam-square-updates .views-row a {
+        text-decoration: none;
+        color: #FFF;
+        }
+
+.view-lam-square-updates .views-row-odd{
+    border-right:2px solid #FFF;
+    }
+
+.view-lam-square-updates .views-field-field-article-date {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #021e47;
+    padding: 7px 13px;
+    color: #FFF;
+    border-radius: 5px;
+    }
+
+/* TITLE */
+.view-lam-square-updates .views-field-title {
+    position: absolute;
+    top: 57%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 80%;
+    text-align: center;
+    font-size: 30px;
+    }
+
+.view-lam-square-updates .views-field-field-article-tagline,
+.view-lam-square-updates .views-field-field-event-tagline {
+    position: absolute;
+    bottom: 20%;
+    text-align: center;
+    margin: auto;
+    left: 0;
+    right: 0;
+    color: #afccfc;
+    font-size: 18px;
+    font-weight: 200;
+    width: 70%;
+    }
+
+/*__________________________*/
 
 
 
+/* Updates block below the main cover image  */
+.block_view{
+  margin-top: 20px;
+}
 
 .section-title {
     font-size: 70px;
@@ -40,10 +112,25 @@
     display: none;
     }
 
+@media (max-width: 1090px) {
+  .section-image-push {
+    margin-top: 65%;
+  }
+}
+
 @media (max-width: 768px) {
-  .section-title,
-  .section-tagline {
-      display: none;
-      }
+.section-title,
+.section-tagline {
+    display: none;
+    }
+
+
+
+/* VIEWS
+___________________________*/
+.view-lam-square-updates .views-row {
+    width: 100%;
+    }
+
 
 }
