--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ sub-theme.
 -------------------------------*/
 
 @import url(https://fonts.googleapis.com/css?family=Cinzel:400,700);
-
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 /* TABLE OF CONTENTS */
 
 /* 1. COMMON - Global styles*/
