--- a/css/style.css
+++ b/css/style.css
@@ -38,5 +38,8 @@ sub-theme.
 /* 8. All Pages: About us, FAQ */
 @import url("page.css");
 
-/* 9. Main Section Pages: Lam Square, CSRC */
+/* 9. Main Section Pages: Lam Square... */
 @import url("section.css");
+
+/* 10. Created special styles for CSRC */
+@import url("section-csrc.css");
