Modifications for Lam Square section page

--- a/css/editing.css
+++ b/css/editing.css
@@ -14,10 +14,10 @@
     margin-bottom: 20px;
     }
 
-.logged-in .event-image-push,
+/*.logged-in .event-image-push,
 .logged-in .article-image-push {
     margin-top: 600px;
-    }
+    }*/
 
 /* Styling WYSIWYG filter options.
 Sits below the WYSIWYG editor.  */
