--- a/css/nav.css
+++ b/css/nav.css
@@ -127,6 +127,13 @@ section#block-menu-menu-carlson-research-center ul li a {
     padding: 7px 12px;
     }
 
+.menu-container .nav>li>a:hover,
+.menu-container .nav>li>a:focus {
+    text-decoration: none;
+    background: transparent;
+    border-bottom: 2px solid #afccfc;
+    }
+
 /* OVERIDES
 Changing Bootstrap Specific Styles
 -------------------------------*/
@@ -136,7 +143,6 @@ Changing Bootstrap Specific Styles
     text-decoration: none;
     /*background-color: #234b87;*/
     background: transparent;
-    border-bottom: 2px solid #afccfc;;
     }
 
 .nav>li>a {
